--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@
     --hero-text-color: #FFFFFF;
     --fon-color: #2F303A;
     --fon-color-button: #f5f4fa;
-    --fon-knob: #188ce8; 
+    --fon-knob: #188ce8;
+    --fon-icon: #AFB1B8; 
 }
 
 .body {
@@ -205,7 +206,6 @@ text-align: center;
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
     url('../images/heroimg\ \(1\).jpg');
-    height: 600px;
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
@@ -285,9 +285,8 @@ color: var(--primery-color);
     padding-bottom: 94px;
 }    
 
-.priorities-logos::before {
+.priorities-logos {
     display: block;
-    content: '';
     }
 
 .priorities-box:not(:last-child) {
@@ -433,7 +432,7 @@ color: var(--primery-color);
     display: flex;
     width: 100%;
     height: 100%;
-    fill: var(--primery-color);
+    fill: var(--fon-icon);
     border-radius: 50%;
     align-items: center;
     justify-content: center;
@@ -460,14 +459,15 @@ color: var(--primery-color);
     display: flex;
     margin-top: 0;
     margin-bottom: 0;
-    align-items: center;
-    justify-content: center;
     }
 
 .clients-title {
-    text-align: center;
+    display: block;
+    font-weight: 700px;
+    font-size: 36px;
     margin-bottom: 50px;
     margin-top: 0;
+    text-align: center;
 }
 
 .client-item:not(:last-child) {
@@ -478,11 +478,9 @@ color: var(--primery-color);
     display: flex;
     width: 170px;
     height: 92px;
-    fill: var(--primery-color);
     cursor: pointer;
     align-items: center;
     justify-content: center;
-    box-sizing: border-box;
     border-radius: 4px;
     }
 
@@ -502,12 +500,19 @@ color: var(--primery-color);
     }
 
 .client-icon {
-    display: flex;
+    fill: currentColor;
+}
+
+.clients-link:hover, 
+.clients-link:focus {
+    color: var(--accent-color);
+}
+
+.client-icon {
     width: 106px;
-    height: 62px;
-    align-items: center;
-    justify-content: center;
-    }
+    height: 60px;
+    color: var(--fon-icon);
+}
 
 /* Footer */
 
@@ -523,7 +528,7 @@ color: var(--primery-color);
     font-weight: bold;
     font-size: 26px;
     line-height: 31px;
-  color: var(--hero-text-color);
+    color: var(--hero-text-color);
   }
 
   .logo-item {
@@ -599,13 +604,16 @@ footer .container {
     }
 
 .join-title {
-    display: flex;
+    display: block;
     color: var(--hero-text-color);
     margin-right: 0;
     margin-top: 0;
     margin-bottom: 20px;
     align-items: center;
     justify-content: center;
+    font-style: bold;
+    font-size: 14px;
+    line-height: 16px;
 }
 
 .footer-social-icon {
@@ -674,7 +682,6 @@ footer .container {
 .filter .current {
     color: var(--hero-text-color);
     background-color: var(--accent-color);
-    border: 1px solid var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0 0 0 / 10%),
     0px 1px 2px rgba(0 0 0 / 8%),
     0px 2px 2px rgba(0 0 0 / 12%);
@@ -724,6 +731,11 @@ font-size: 16px;
 line-height: 30px;
 letter-spacing: 0.03em;
 color: var(--primery-color);
+}
+
+.project-list:hover,
+.project-list:hover {
+    
 }
 
 /* Flex-container */
