--- a/css/styles.css
+++ b/css/styles.css
@@ -475,43 +475,31 @@ color: var(--primery-color);
 }
 
 .client-item {
-    display: flex;
     width: 170px;
     height: 92px;
-    cursor: pointer;
-    align-items: center;
-    justify-content: center;
     border-radius: 4px;
     }
 
-.client-item {
-    border: 1px solid #afb1b8;
-    }  
-
-.client-item:hover {
-    border: 1px solid #2196F3;
-    }  
-
-.client-item :hover,
-.client-item :focus {
-    color: #AFB1B8;
-    fill: #2196F3;
-    cursor: pointer;
-    }
-
-.client-icon {
-    fill: currentColor;
-}
-
 .clients-link:hover, 
 .clients-link:focus {
+    border-color: var(--accent-color);
     color: var(--accent-color);
+}
+
+.clients-link {
+    border: 1px solid #afb1b8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    border-radius: 4px;
+    color: var(--fon-icon);
 }
 
 .client-icon {
     width: 106px;
     height: 60px;
-    color: var(--fon-icon);
+    fill: currentColor;
 }
 
 /* Footer */
@@ -733,9 +721,11 @@ letter-spacing: 0.03em;
 color: var(--primery-color);
 }
 
-.project-list:hover,
-.project-list:hover {
-    
+.content-list:hover,
+.content-list:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 6px 4px rgba(0, 0, 0, 0.16);
 }
 
 /* Flex-container */
